--- a/Code/NYCOpenData.ipynb
+++ b/Code/NYCOpenData.ipynb
@@ -19357,9 +19357,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:nycc]",
+   "display_name": "Python 3.10.9 64-bit",
    "language": "python",
-   "name": "conda-env-nycc-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -19371,7 +19371,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   }
  },
  "nbformat": 4,
